--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
   font-family: 'Roboto';
   box-sizing: border-box ;
 }
+body{
+   background: linear-gradient(to left, #a8ff78, #78ffd6)}
 .encabezado{
    text-align: center;
    margin-bottom: 50px;
@@ -10,6 +12,16 @@
    font-size: 38px;
 }
 
+@media(min-width:450px){
+   .contenidos{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      column-gap: 50px;
+   }
+   
+}
 /* ------------- template --------------- */
 
 .articulos{
@@ -17,9 +29,15 @@
    max-width: 400px;
    box-sizing:content-box;
    margin: 20px auto;
-
+   border-radius: 15px;
+   height: 100%;
 }
 
+@media(min-width:450px){
+   .articulos{
+      margin: 0;
+   }
+}
 .article-img{
    width: 100%;
    height: 255px;
