--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body{
    background: linear-gradient(to left, #a8ff78, #78ffd6)}
 .encabezado{
    text-align: center;
-   margin-bottom: 50px;
+   margin-bottom: 8%;
 }
 .titulo{
    font-size: 38px;
